--- a/casino_testapp/casino_testapp.csproj
+++ b/casino_testapp/casino_testapp.csproj
@@ -159,7 +159,6 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -175,11 +174,21 @@
     <Content Include="Content\assets\css\style.css" />
     <Content Include="Content\assets\img\apple-touch-icon.png" />
     <Content Include="Content\assets\img\card.jpg" />
+    <Content Include="Content\assets\img\Dashboard\Arcade.png" />
+    <Content Include="Content\assets\img\Dashboard\Ball.png" />
+    <Content Include="Content\assets\img\Dashboard\CARDs.png" />
+    <Content Include="Content\assets\img\Dashboard\Crown.png" />
+    <Content Include="Content\assets\img\Dashboard\Fish.png" />
+    <Content Include="Content\assets\img\Dashboard\Home.png" />
+    <Content Include="Content\assets\img\Dashboard\ICONS_BG.png" />
+    <Content Include="Content\assets\img\Dashboard\SlotMachine.png" />
+    <Content Include="Content\assets\img\Dashboard\weather-cock.png" />
     <Content Include="Content\assets\img\favicon.png" />
     <Content Include="Content\assets\img\logo.png" />
     <Content Include="Content\assets\img\messages-1.jpg" />
     <Content Include="Content\assets\img\messages-2.jpg" />
     <Content Include="Content\assets\img\messages-3.jpg" />
+    <Content Include="Content\assets\img\Navbar\nbbackground.png" />
     <Content Include="Content\assets\img\news-1.jpg" />
     <Content Include="Content\assets\img\news-2.jpg" />
     <Content Include="Content\assets\img\news-3.jpg" />
@@ -192,10 +201,8 @@
     <Content Include="Content\assets\img\product-4.jpg" />
     <Content Include="Content\assets\img\product-5.jpg" />
     <Content Include="Content\assets\img\profile-img.jpg" />
-    <Content Include="Content\assets\img\sample.png" />
-    <Content Include="Content\assets\img\slides-1.jpg" />
-    <Content Include="Content\assets\img\slides-2.jpg" />
-    <Content Include="Content\assets\img\slides-3.jpg" />
+    <Content Include="Content\assets\img\thumbnail\Games.png" />
+    <Content Include="Content\assets\img\webbackground.jpg" />
     <Content Include="Content\assets\js\main.js" />
     <Content Include="Content\assets\scss\Readme.txt" />
     <Content Include="Content\assets\vendor\apexcharts\apexcharts.amd.js" />
