--- a/casino_testapp/casino_testapp.csproj
+++ b/casino_testapp/casino_testapp.csproj
@@ -196,6 +196,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Game.cs" />
+    <Compile Include="Models\GameUrl.cs" />
     <Compile Include="Models\GameUtility.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
